# fastapi-movie-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
movie-catalog/: .coveragerc  .env.example  app_lifespan.py  main.py  manage.py  stuff.py
movie-catalog/api/: main_views.py
movie-catalog/api/api_v1/: __init__.py
movie-catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
movie-catalog/api/api_v1/movie_descriptions/: crud.py  dependencies.py  views.py
movie-catalog/api/api_v1/movies/: crud.py  dependencies.py  redis.py
movie-catalog/api/api_v1/movies/views/: __init__.py  details_views.py  list_views.py
movie-catalog/commands/: __init__.py  cli.py  hello.py  tokens.py
movie-catalog/core/: config.py
movie-catalog/schemas/: movie_description.py  movies.py
movie-catalog/testing/: __init__.py  conftest.py
movie-catalog/testing/test_api/: conftest.py  test_views.py
movie-catalog/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
movie-catalog/testing/test_api/test_api_v1/test_movies/: test_crud.py  test_dependencies.py
movie-catalog/testing/test_api/test_api_v1/test_movies/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
movie-catalog/testing/test_api/test_api_v1/test_movies/test_views/test_list_views/: test_create.py
movie-catalog/testing/test_schemas/: test_movies.py  test_user.py
